--- a/behave_dble/compose/docker-compose.yml
+++ b/behave_dble/compose/docker-compose.yml
@@ -5,20 +5,20 @@ networks:
        name: dble_test
 services:
     dble-1:
-        image: dble/dble_test_general:latest
+        image: docker-registry:5000/actiontech/dble-runtime-centos7:latest
         container_name: dble-1
         hostname: dble-1
         privileged: true
         stdin_open: true
         tty: true
-        command: ["dble","1"]
+        #command: ["dble","1"]
         volumes:
             - /opt/dble-1:/init_assets
             - /opt/share:/share
         ports:
             - "7121:9066"
             - "7131:8066"
-            - "7141:3306"
+            - "7141:3307"
             - "7151:22"
         networks:
             default:
@@ -27,20 +27,20 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     dble-2:
-        image: dble/dble_test_general:latest
+        image: docker-registry:5000/actiontech/dble-runtime-centos7:latest
         container_name: dble-2
         hostname: dble-2
         privileged: true
         stdin_open: true
         tty: true
-        command: ["dble","2"]
+        #command: ["dble","2"]
         volumes:
             - /opt/dble-2:/init_assets
             - /opt/share:/share
         ports:
             - "7122:9066"
             - "7132:8066"
-            - "7142:3306"
+            - "7142:3307"
             - "7152:22"
         networks:
             default:
@@ -49,20 +49,20 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     dble-3:
-        image: dble/dble_test_general:latest
+        image: docker-registry:5000/actiontech/dble-runtime-centos7:latest
         container_name: dble-3
         hostname: dble-3
         privileged: true
         stdin_open: true
         tty: true
-        command: ["dble","3"]
+        #command: ["dble","3"]
         volumes:
             - /opt/dble-3:/init_assets
             - /opt/share:/share
         ports:
             - "7123:9066"
             - "7133:8066"
-            - "7143:3306"
+            - "7143:3307"
             - "7153:22"
         networks:
             default:
@@ -71,18 +71,18 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     mysql:
-        image: dble/dble_test_general:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql
         hostname: mysql
         privileged: true
         stdin_open: true
         tty: true
-        command: ["mysql","4"]
+        #command: ["mysql","4"]
         volumes:
             - /opt/mysql:/init_assets
             - /opt/share:/share
         ports:
-            - "7144:3306"
+            - "7144:3307"
             - "7154:22"
         networks:
             default:
@@ -91,18 +91,18 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     mysql-master1:
-        image: dble/dble_test_general:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql-master1
         hostname: mysql-master1
         privileged: true
         stdin_open: true
-        command: ["mysql","5"]
+        #command: ["mysql","5"]
         tty: true
         volumes:
             - /opt/mysql-master1:/init_assets
             - /opt/share:/share
         ports:
-            - "7145:3306"
+            - "7145:3307"
             - "7155:22"
         networks:
             default:
@@ -111,18 +111,18 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     mysql-master2:
-        image: dble/dble_test_general:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql-master2
         hostname: mysql-master2
         privileged: true
         stdin_open: true
-        command: ["mysql","6"]
+        #command: ["mysql","6"]
         tty: true
         volumes:
             - /opt/mysql-master2:/init_assets
             - /opt/share:/share
         ports:
-            - "7146:3306"
+            - "7146:3307"
             - "7156:22"
         networks:
             default:
@@ -130,24 +130,8 @@ services:
               ipv6_address: 2001:3984:3989::16
         dns: 114.114.114.114
         working_dir: /opt
-    c-plus-driver:
-        image: dble/dble_test_driver:latest
-        container_name: driver-test
-        hostname: driver-test
-        privileged: true
-        stdin_open: true
-        tty: true
-        volumes:
-            - /opt/c-plus-driver:/init_assets
-            - /opt/share:/share
-        networks:
-            default:
-              ipv4_address: 172.100.9.7
-              ipv6_address: 2001:3984:3989::17
-        dns: 114.114.114.114
-        working_dir: /opt
     behave:
-        image: dble/dble_test_client:latest
+        image: dble/dble_test_behave:v1
         container_name: behave
         hostname: behave
         privileged: true
@@ -164,18 +148,18 @@ services:
         working_dir: /init_assets
 
     mysql8-master1:
-        image: dble/dble_test_mysql8:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql8-master1
         hostname: mysql8-master1
         privileged: true
         stdin_open: true
-        command: ["mysql","9"]
+        #command: ["mysql","9"]
         tty: true
         volumes:
         - /opt/mysql8-master1:/init_assets
         - /opt/share:/share
         ports:
-        - "7241:3306"
+        - "7241:3307"
         - "7251:22"
         networks:
             default:
@@ -184,18 +168,18 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     mysql8-master2:
-        image: dble/dble_test_mysql8:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql8-master2
         hostname: mysql8-master2
         privileged: true
         stdin_open: true
-        command: ["mysql","10"]
+        #command: ["mysql","10"]
         tty: true
         volumes:
         - /opt/mysql8-master2:/init_assets
         - /opt/share:/share
         ports:
-        - "7242:3306"
+        - "7242:3307"
         - "7252:22"
         networks:
             default:
@@ -204,18 +188,18 @@ services:
         dns: 114.114.114.114
         working_dir: /opt
     mysql8-slave1:
-        image: dble/dble_test_mysql8:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql8-slave1
         hostname: mysql8-slave1
         privileged: true
         stdin_open: true
-        command: ["mysql","11"]
+        #command: ["mysql","11"]
         tty: true
         volumes:
         - /opt/mysql8-slave1:/init_assets
         - /opt/share:/share
         ports:
-        - "7243:3306"
+        - "7243:3307"
         - "7253:22"
         networks:
             default:
@@ -225,18 +209,18 @@ services:
         working_dir: /opt
 
     mysql8-slave2:
-        image: dble/dble_test_mysql8:latest
+        image: docker-registry:5000/actiontech/centos7-dbdeployer:latest
         container_name: mysql8-slave2
         hostname: mysql8-slave2
         privileged: true
         stdin_open: true
-        command: ["mysql","12"]
+        #command: ["mysql","12"]
         tty: true
         volumes:
         - /opt/mysql8-slave2:/init_assets
         - /opt/share:/share
         ports:
-        - "7244:3306"
+        - "7244:3307"
         - "7254:22"
         networks:
             default:
