--- a/behave_dble/conf/auto_dble_test.yaml
+++ b/behave_dble/conf/auto_dble_test.yaml
@@ -59,80 +59,90 @@ cfg_mysql:
   group1:
     master1:
       ip: 172.100.9.5
-      port: 3306
+      port: 3307
       hostname: mysql-master1
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5_7_25
   group2:
     master1:
       ip: 172.100.9.6
-      port: 3306
+      port: 3307
       hostname: mysql-master2
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5_7_25
     slave1:
       ip: 172.100.9.2
-      port: 3306
+      port: 3307
       hostname: mysql-slave1
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5_7_25
     slave2:
       ip: 172.100.9.3
-      port: 3306
+      port: 3307
       hostname: mysql-slave2
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5_7_25
   group3:
     master1:
       ip: 172.100.9.1
-      port: 3306
+      port: 3307
       hostname: mysql-master3
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5_7_25
   group4:
     master1:
       ip: 172.100.9.9
-      port: 3306
+      port: 3307
       hostname: mysql8-master1
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8_0_18
   group5:
     master1:
       ip: 172.100.9.10
-      port: 3306
+      port: 3307
       hostname: mysql8-master2
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8_0_18
     slave1:
       ip: 172.100.9.11
-      port: 3306
+      port: 3307
       hostname: mysql8-slave1
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8_0_18
     slave2:
       ip: 172.100.9.12
-      port: 3306
+      port: 3307
       hostname: mysql8-slave2
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8_0_18
   compare_mysql:
   #mysql for comparing query result
     master1:
       ip: 172.100.9.4
-      port: 3306
+      port: 3307
       hostname: mysql
       user: test
       password: 111111
-      install_path: /usr/local/mysql
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5_7_25
 cfg_zookeeper:
   home: /opt/zookeeper
   port: 2181
