--- a/behave_dble/compose/docker-build-dble/requirements.txt
+++ b/behave_dble/compose/docker-build-dble/requirements.txt
@@ -1,8 +1,3 @@
-behave==1.2.6
-mysqlclient==1.4.2
-allure-behave==2.8.0
-paramiko==2.4.2
-PyYAML>=4.2b1
-PyHamcrest==1.9.0
-lxml==4.2.5
-cryptography==2.4.2
+six==1.14.0
+coloredlogs==14.0
+rsa==4.0
