--- a/drivers/jdbc-api-test/pom.xml
+++ b/drivers/jdbc-api-test/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.35</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
