--- a/behave_dble/conf/auto_test_dble_release.yaml
+++ b/behave_dble/conf/auto_test_dble_release.yaml
@@ -1,86 +1,149 @@
 cfg_sys:
   docker_compose_path: compose/docker-compose.yml
   share_path_docker: /share
-  ssh_user: root
-  ssh_password: sshpass
   default_db: schema1
   sql_source: assets/sql
+  dble_conf_dir_in_behave: dble_conf/
+cfg_server:
+  ssh_user: root
+  ssh_password: sshpass
 cfg_dble:
-  install_dir: /opt
-  conf_dir: dble_conf/
-  client_user: test
-  client_password: 111111
-  client_port: 8066
-  manager_user: root
-  manager_password: 111111
-  manager_port: 9066
   dble:
     ip: 172.100.9.1
     hostname: dble-1
+    install_dir: /opt
+    client_user: test
+    client_password: 111111
+    client_port: 8066
+    manager_user: root
+    manager_password: 111111
+    manager_port: 9066
   dble_cluster:
     dble-1:
       ip: 172.100.9.1
       hostname: dble-1
+      install_dir: /opt
+      conf_dir: dble_conf/
+      client_user: test
+      client_password: 111111
+      client_port: 8066
+      manager_user: root
+      manager_password: 111111
+      manager_port: 9066
     dble-2:
       ip: 172.100.9.2
       hostname: dble-2
+      install_dir: /opt
+      conf_dir: dble_conf/
+      client_user: test
+      client_password: 111111
+      client_port: 8066
+      manager_user: root
+      manager_password: 111111
+      manager_port: 9066
     dble-3:
       ip: 172.100.9.3
       hostname: dble-3
-  packet_name: actiontech-dble-{0}.tar.gz #replace {0} with version
-  ftp_path: https://github.com/actiontech/dble/releases/download/{0}%2Ftag/
+      install_dir: /opt
+      conf_dir: dble_conf/
+      client_user: test
+      client_password: 111111
+      client_port: 8066
+      manager_user: root
+      manager_password: 111111
+      manager_port: 9066
+  packet_name: dble-{0}-linux.tar.gz #replace {0} with version
+  ftp_path: {0}/actiontech/dble/releases/download/{1}%2Ftag/
+  download_host: https://hub.fastgit.org
   sql_cover_log: sql_cover_log
 cfg_mysql:
-  user: test
-  password: 111111
-  client_port: 3307
-  install_path: /usr/local/mysql
   group1:
     master1:
       ip: 172.100.9.5
       port: 3307
       hostname: mysql-master1
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5.7.25
   group2:
     master1:
       ip: 172.100.9.6
       port: 3307
       hostname: mysql-master2
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5.7.25
     slave1:
       ip: 172.100.9.2
       port: 3307
       hostname: mysql-slave1
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5.7.25
     slave2:
       ip: 172.100.9.3
       port: 3307
       hostname: mysql-slave2
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5.7.25
   group3:
     master1:
       ip: 172.100.9.1
       port: 3307
       hostname: mysql-master3
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5.7.25
   group4:
     master1:
       ip: 172.100.9.9
       port: 3307
       hostname: mysql8-master1
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8.0.18
   group5:
     master1:
       ip: 172.100.9.10
       port: 3307
       hostname: mysql8-master2
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8.0.18
     slave1:
       ip: 172.100.9.11
       port: 3307
       hostname: mysql8-slave1
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8.0.18
     slave2:
       ip: 172.100.9.12
       port: 3307
       hostname: mysql8-slave2
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_8_0_18
+      version: 8.0.18
   compare_mysql:
+  #mysql for comparing query result
     master1:
       ip: 172.100.9.4
       port: 3307
       hostname: mysql
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/msb_5_7_25
+      version: 5.7.25
 cfg_zookeeper:
   home: /opt/zookeeper
   port: 2181
