update github reviewers

--- a/.github/auto_test_assign.yml
+++ b/.github/auto_test_assign.yml
@@ -8,8 +8,9 @@ addAssignees: false
 reviewers:
   - wangjuan-action
   - wjl1619
-  - quexiuping
+#  - quexiuping
   - Dinosauria
+  - jndxcaiwei
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
