test sql cover with useNewJoinOptimizer (#434)

--- a/behave_dble/dble_conf/sql_cover_sharding_bk/bootstrap.cnf
+++ b/behave_dble/dble_conf/sql_cover_sharding_bk/bootstrap.cnf
@@ -22,5 +22,7 @@
 -Dprocessors=1
 -DprocessorExecutor=1
 
+-DuseNewJoinOptimizer=true
+
 #for code coverage
 #-javaagent:lib/jacocoagent.jar=output=file,append=true,destfile=/opt/dble_jacoco.exec
