--- a/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
+++ b/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
@@ -20,5 +20,7 @@
 #system config
 -DserverPort=8066
 
+-DuseNewJoinOptimizer=true
+
 #for code coverage
 #-javaagent:lib/jacocoagent.jar=output=file,append=true,destfile=/opt/dble_jacoco.exec
