Update sed command (#457)
* update grep content and support "'"

* update cluster cases about check content

* update again

(cherry picked from commit bfbc428bdef0cc78eec6442c203102461c5dfab8)

--- a/behave_dble/behave.ini
+++ b/behave_dble/behave.ini
@@ -16,3 +16,6 @@ test_config = auto_dble_test.yaml
 dble_conf = template
 is_cluster = false
 user_debug = false
+ftp_address = 10.186.18.90
+ftp_user = username
+ftp_passwd = password
