--- a/res_compare/behave.ini
+++ b/res_compare/behave.ini
@@ -9,9 +9,10 @@ stop           = false
 tags           = ~@skip
 
 [behave.userdata]
-#reinstall = false
-#install_from_local = false
+
+reinstall = false
 reset = true
-test_config = config.yaml
+install_from_local = false
+test_config = auto_dble_test.yaml
 dble_conf = template
 user_debug = false
