--- a/res_compare/behave.ini
+++ b/res_compare/behave.ini
@@ -10,7 +10,7 @@ tags           = ~@skip
 
 [behave.userdata]
 #reinstall = false
-#install_from_local = false
+install_from_local = false
 reset = true
 test_config = config.yaml
 dble_conf = template
