--- a/res_compare/conf/config.yaml
+++ b/res_compare/conf/config.yaml
@@ -1,7 +1,33 @@
 test_conf:
+  time_weight: 1
   dble_topo: single # single, cluster
   dble_conf: default # default, global, mixed, nosharding, sharding
   mysql_version: &mysql_version '5.7'
+  dble_version: 3.22.11.0
+  dble_package_timestamp: '20220615064550' # dble安装包时间戳, 需要加引号避免被识别为int
+  dble_remote_host: ftp://ftpuser:ftpuser@10.186.18.90  
+  dble_remote_path: /actiontech-dble/qa/{DBLE_VERSION}/actiontech-dble.tar.gz  
+  ftp_user: ftpuser  
+  ftp_password: ftpuser
+  auto_retry: 2 # 0 表示不重试
+
+constant:
+  docker_compose_path: compose/docker-compose-{DBLE_TOPO}.yml
+  ssh_user: root
+  ssh_password: sshpass
+  dble_home: /opt/dble
+  # https://actiontech.github.io/dble-docs-cn/1.config_file/1.04_db.xml.html
+  client_privilege: ['SELECT', 'INSERT', 'UPDATE', 'DELETE', 'FILE', 'CREATE', 'DROP', 'ALTER', 'LOCK TABLES', 'ALTER ROUTINE', 'CREATE ROUTINE', 'EXECUTE', 'INDEX', 'SUPER', 'SHOW DATABASES', 'PROCESS', 'REPLICATION CLIENT', 'REFERENCES']
+  client_privilege_extend_mysql_8: ['XA_RECOVER_ADMIN']
+  mysql_sandbox_dir: sandbox
+  zookeeper_port: 2181
+
+cfg_sys:
+  docker_compose_path: compose/docker-compose.yml
+  share_path_docker: /share
+  default_db: schema1
+  sql_source: assets/sql
+  dble_conf_dir_in_behave: dble_conf/
 
 cfg_dble:
   single:
@@ -54,7 +80,38 @@ cfg_mysql:
       password: 111111
       install_path: /root/sandboxes/sandbox/node2
       version: *mysql_version
-  group3:  #1主1从
+
+  group3:
+    inst-1:
+      ip: 172.100.9.1
+      port: 3306
+      hostname: mysql-master3
+      user: test
+      password: 111111
+      install_path: /root/sandboxes/sandbox
+      version: *mysql_version
+
+  # group3:  #1主1从
+  #   inst-1:
+  #     ip: 172.100.9.4
+  #     port: 3306
+  #     hostname: mysql
+  #     user: test
+  #     password: 111111
+  #     install_path: /root/sandboxes/sandbox/master
+  #     version: *mysql_version
+  #   inst-2:
+  #     ip: 172.100.9.4
+  #     port: 3307
+  #     hostname: mysql-slave3
+  #     user: test
+  #     password: 111111
+  #     install_path: /root/sandboxes/sandbox/node1
+  #     version: *mysql_version
+
+
+  compare_mysql:
+  #mysql for comparing query result
     inst-1:
       ip: 172.100.9.4
       port: 3306
@@ -63,6 +120,7 @@ cfg_mysql:
       password: 111111
       install_path: /root/sandboxes/sandbox/master
       version: *mysql_version
+
     inst-2:
       ip: 172.100.9.4
       port: 3307
@@ -71,5 +129,3 @@ cfg_mysql:
       password: 111111
       install_path: /root/sandboxes/sandbox/node1
       version: *mysql_version
-
-
