--- a/res_compare/conf/auto_dble_test.yaml
+++ b/res_compare/conf/auto_dble_test.yaml
@@ -3,13 +3,12 @@ test_conf:
   dble_topo: single # single, cluster
   dble_conf: default # default, global, mixed, nosharding, sharding
   mysql_version: &mysql_version '5.7' # 5.7, 8.0 需要加引号避免被识别为float
-  dble_version: 3.22.11.0
+  dble_version: 3.22.11.99
   dble_package_timestamp: '20220615064550' # dble安装包时间戳, 需要加引号避免被识别为int
   auto_retry: 2 # 0 表示不重试
-  dble_remote_host: ftp://ftpuser:ftpuser@10.186.18.90  
-  dble_remote_path: /actiontech-dble/qa/{DBLE_VERSION}/actiontech-dble.tar.gz  
-  ftp_user: ftpuser  
-  ftp_password: ftpuser
+  dble_remote_host: https://hub.fastgit.org
+  dble_remote_path: /actiontech/dble/releases/download/{DBLE_VERSION}/tag/dble-{DBLE_VERSION}-{DBLE_PACKAGE_TIMESTAMP}-java1.8.0_151-linux.tar.gz
+
 
 constant:
   docker_compose_path: compose/docker-compose-{DBLE_TOPO}.yml
