Revert "修改pipfile引用的mysql.connector = "*"触发sql统计的修改 和 insert 数据加入user传参"
This reverts commit 7ddb043c1adb42f00ecd1ab3303547d235e72e78.

--- a/behave_dble/Pipfile
+++ b/behave_dble/Pipfile
@@ -6,15 +6,15 @@ name = "pypi"
 [packages]
 mysqlclient = "==1.4.2"
 behave = "==1.2.6"
-environs = "==9.5.0"
-paramiko = "==3.2.0"
-pyhamcrest = "==2.0.4"
-pymysql = "==1.0.3"
-pyyaml = "==6.0"
-allure-behave = "==2.13.2"
-lxml = "==4.9.2"
-pip = "==23.1.2"
-"mysql.connector" = "==2.2.9"
+environs = "*"
+paramiko = "*"
+pyhamcrest = "*"
+pymysql = "*"
+pyyaml = "*"
+allure-behave = "*"
+lxml = "*"
+pip = "*"
+mysql = {connector = "*"}
 
 [dev-packages]
 
