修改case适用于2.20.04

--- a/behave_dble/Pipfile
+++ b/behave_dble/Pipfile
@@ -11,7 +11,7 @@ paramiko = "==3.2.0"
 pyhamcrest = "==2.0.4"
 pymysql = "==1.0.3"
 pyyaml = "==6.0"
-allure-behave = "==2.13.2"
+allure-behave = "==*"
 lxml = "==4.9.2"
 pip = "==23.1.2"
 "mysql.connector" = "==2.2.9"
