--- a/behave_dble/dble_conf/template_bk/myid.properties
+++ b/behave_dble/dble_conf/template_bk/myid.properties
@@ -4,7 +4,7 @@
 #
 
 #set false if not use cluster ucore/zk
-cluster=zk
+cluster=false
 #clinet info
 ipAddress=172.100.9.1:2181,172.100.9.2:2181,172.100.9.3:2181
 #cluster namespace, please use the same one in one cluster
