增加oom后的日志路径

--- a/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
+++ b/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
@@ -11,6 +11,11 @@
 -Xmx4G
 -Xms1G
 -XX:MaxDirectMemorySize=2G
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/opt/dble/logs/java_error_in_idea.hprof
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
+-Xloggc:./logs/gc_%WRAPPER_TIME_YYYYMMDDHHIISS%_%p.log
 #  base config
 -DhomePath=.
 -DinstanceName=1
