--- a/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
+++ b/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
@@ -25,5 +25,7 @@
 #system config
 -DserverPort=8066
 
+-DmanagerFrontWorker=1
+
 #for code coverage
 #-javaagent:lib/jacocoagent.jar=output=file,append=true,destfile=/opt/dble_jacoco.exec
