--- a/behave_dble/dble_conf/sql_cover_sharding_bk/bootstrap.cnf
+++ b/behave_dble/dble_conf/sql_cover_sharding_bk/bootstrap.cnf
@@ -26,7 +26,7 @@
 # processor
 -Dprocessors=1
 -DprocessorExecutor=1
--DmanagerFrontWorker=1
+#-DmanagerFrontWorker=1
 
 #for code coverage
 #-javaagent:lib/jacocoagent.jar=output=file,append=true,destfile=/opt/dble_jacoco.exec
