Revert "修改不在3.23.05的参数，后续这个commit不需要合并"
This reverts commit 4e722b60268a8679d5f10279fdbcd9b0df37de8d.

--- a/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
+++ b/behave_dble/dble_conf/sql_cover_global_bk/bootstrap.cnf
@@ -25,7 +25,7 @@
 #system config
 -DserverPort=8066
 
-#-DmanagerFrontWorker=1
+-DmanagerFrontWorker=1
 
 #for code coverage
 #-javaagent:lib/jacocoagent.jar=output=file,append=true,destfile=/opt/dble_jacoco.exec
