更改zookeep的版本到3.4.14版本

--- a/behave_dble/compose/docker-build-dble/Dockerfile
+++ b/behave_dble/compose/docker-build-dble/Dockerfile
@@ -72,15 +72,15 @@ RUN VERSION=1.58.2 && \
     rm -f /dbdeployer_completion.sh
 
 #install zookeeper
-RUN wget -P /tmp https://archive.apache.org/dist/zookeeper/zookeeper-3.5.2-alpha/zookeeper-3.5.2-alpha.tar.gz && \
+RUN wget -P /tmp https://archive.apache.org/dist/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz && \
     mkdir /opt/zookeeper && \
-    tar -zxf /tmp/zookeeper-3.5.2-alpha.tar.gz -C /opt/zookeeper --strip-components=1 && \
+    tar -zxf /tmp/zookeeper-3.4.14.tar.gz -C /opt/zookeeper --strip-components=1 && \
     echo " ">> /opt/zookeeper/conf/zoo.cfg && \
     sed -i "$ a tickTime=2000\ninitLimit=10\nsyncLimit=5 \nclientPort=2181" /opt/zookeeper/conf/zoo.cfg && \
     sed -i "$ a dataDir=/opt/zookeeper/data\ndataLoginDir=/opt/zookeeper/logs" /opt/zookeeper/conf/zoo.cfg && \
     sed -i "$ a server.1=dble-1:2888:3888\nserver.2=dble-2:2888:3888\nserver.3=dble-3:2888:3888" /opt/zookeeper/conf/zoo.cfg && \
     mkdir /opt/zookeeper/data/ && \
-    rm -rf /tmp/zookeeper-3.5.2-alpha.tar.gz
+    rm -rf /tmp/zookeeper-3.4.14.tar.gz
 
 RUN echo "export PATH=/opt/zookeeper/bin:/opt/btrace/bin/:/usr/local/mysql/bin:/opt/jdk/bin:$PATH">>/etc/bashrc
 
