ci增加配置重构的case

--- a/behave_dble/Makefile
+++ b/behave_dble/Makefile
@@ -66,7 +66,8 @@ run_func_stable_case: up
 	features/func_test/heartbeat/ \
 	features/func_test/metalock/ \
 	features/func_test/show_sql_time_log \
-	features/func_test/htap_test
+	features/func_test/htap_test \
+	features/func_test/reload_refine
 
 run_cfg_case: up
 	pipenv run behave -D dble_conf=template features/setup.feature \
